--- a/client/src/teamprojects/project_1/css/styles.css
+++ b/client/src/teamprojects/project_1/css/styles.css
@@ -27,16 +27,14 @@ input {
   box-shadow: none;
 }
 
-label {
-  display: inline-block;
-  width: 50px;
+.mass-form input {
+  margin-right: 10px;
 }
 
 button {
   background-color: #139eca;
   color: #f6f7f9;
   padding: 5px 10px;
-  margin-left: 10px;
   border-radius: 5px;
   border: 1px solid black;
   outline: none;
@@ -49,4 +47,12 @@ button:hover {
 
 button:active {
   background-color: #46d1fb;
+}
+
+.mass-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 35px;
 }
