--- a/client/src/teamprojects/css/styles.css
+++ b/client/src/teamprojects/css/styles.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  font-family: Arial;
+  font-family: 'Montserrat', sans-serif;
   background-color: #22272f;
   color: #f6f7f9;
   height: 100vh;
@@ -40,4 +40,44 @@ main {
   display: flex;
   justify-content: center;
   padding: 20px;
+}
+
+section {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+}
+
+input {
+  width: 100px;
+  height: 25px;
+  padding: 5px;
+  border-radius: 5px;
+  border: none;
+  outline: none;
+  box-shadow: none;
+}
+
+input:hover {
+  box-shadow: 0px 0px 8px #f6f7f9;
+}
+
+button {
+  background-color: #139eca;
+  color: #f6f7f9;
+  padding: 5px 10px;
+  border-radius: 5px;
+  border: 1px solid black;
+  outline: none;
+  box-shadow: none;
+}
+
+button:hover {
+  background-color: #16bcee;
+}
+
+button:active {
+  background-color: #46d1fb;
 }
