--- a/client/src/teamprojects/project_1/css/styles.css
+++ b/client/src/teamprojects/project_1/css/styles.css
@@ -1,12 +1,4 @@
-section {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  gap: 30px;
-}
-
-article {
+.card {
   width: 300px;
   height: 300px;
   margin-top: 60px;
@@ -17,42 +9,14 @@ article {
   background-color: #1d1f25;
 }
 
-input {
-  width: 100px;
-  height: 25px;
-  padding: 5px;
-  border-radius: 5px;
-  border: 1px solid black;
-  outline: none;
-  box-shadow: none;
-}
-
-.mass-form input {
-  margin-right: 10px;
-}
-
-button {
-  background-color: #139eca;
-  color: #f6f7f9;
-  padding: 5px 10px;
-  border-radius: 5px;
-  border: 1px solid black;
-  outline: none;
-  box-shadow: none;
-}
-
-button:hover {
-  background-color: #16bcee;
-}
-
-button:active {
-  background-color: #46d1fb;
-}
-
 .mass-form {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
   gap: 35px;
+}
+
+.mass-form input {
+  margin-right: 10px;
 }
