--- a/client/src/teamprojects/css/styles.css
+++ b/client/src/teamprojects/css/styles.css
@@ -4,20 +4,28 @@
   padding: 0;
 }
 
+:root {
+  --bg-color-1: #22272f;
+  --bg-color-2: #323a45;
+  --bg-color-3: #1d1f25;
+  --accent-color: #139eca;
+  --text-color: #f6f7f9;
+}
+
 body {
   font-family: 'Montserrat', sans-serif;
-  background-color: #22272f;
-  color: #f6f7f9;
+  background-color: var(--bg-color-1);
+  color: var(--text-color);
   height: 100vh;
 }
 
 h1,
 h2 {
-  text-shadow: 0px 0px 3px #139eca;
+  text-shadow: 0px 0px 3px var(--accent-color);
 }
 
 header {
-  background-color: #323a45;
+  background-color: var(--bg-color-2);
   height: 120px;
   display: flex;
   flex-direction: column;
@@ -33,7 +41,7 @@ nav ul {
 }
 
 a {
-  color: #f6f7f9;
+  color: var(--text-color);
   text-decoration: none;
 }
 
@@ -66,12 +74,12 @@ input {
 }
 
 input:hover {
-  box-shadow: 0px 0px 10px #139eca;
+  box-shadow: 0px 0px 10px var(--accent-color);
 }
 
 button {
-  background-color: #139eca;
-  color: #f6f7f9;
+  background-color: var(--accent-color);
+  color: var(--text-color);
   padding: 5px 10px;
   border-radius: 5px;
   border: 1px solid black;
@@ -95,11 +103,11 @@ button:active {
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  background-color: #1d1f25;
+  background-color: var(--bg-color-3);
 }
 
 .card:hover {
-  box-shadow: 0px 0px 15px #139eca;
+  box-shadow: 0px 0px 15px var(--accent-color);
 }
 
 form {
