--- a/client/src/teamprojects/css/styles.css
+++ b/client/src/teamprojects/css/styles.css
@@ -63,26 +63,12 @@ section {
   gap: 30px;
 }
 
-input {
-  width: 100px;
-  height: 25px;
-  padding: 5px;
-  border-radius: 5px;
-  border: none;
-  outline: none;
-  box-shadow: none;
-}
-
-input:hover {
-  box-shadow: 0px 0px 10px var(--accent-color);
-}
-
 button {
   background-color: var(--accent-color);
   color: var(--text-color);
   padding: 5px 10px;
   border-radius: 5px;
-  border: 1px solid black;
+  border: none;
   outline: none;
   box-shadow: none;
 }
@@ -119,5 +105,28 @@ form {
 }
 
 input {
+  width: 100px;
+  height: 25px;
+  padding: 5px;
+  border-radius: 5px;
   margin-right: 10px;
+  border: none;
+  outline: none;
+  box-shadow: none;
+}
+
+input:hover {
+  box-shadow: 0px 0px 10px var(--accent-color);
+}
+
+select {
+  height: 25px;
+  border-radius: 5px;
+  border: none;
+  outline: none;
+  box-shadow: none;
+}
+
+select:hover {
+  box-shadow: 0px 0px 10px var(--accent-color);
 }
