--- a/client/src/teamprojects/css/styles.css
+++ b/client/src/teamprojects/css/styles.css
@@ -66,7 +66,8 @@ section {
 button {
   background-color: var(--accent-color);
   color: var(--text-color);
-  padding: 5px 10px;
+  width: 80px;
+  height: 27px;
   border-radius: 5px;
   border: none;
   outline: none;
@@ -104,28 +105,27 @@ form {
   gap: 35px;
 }
 
-input {
-  width: 100px;
-  height: 25px;
-  padding: 5px;
+input,
+select {
+  width: 80px;
+  height: 27px;
   border-radius: 5px;
-  margin-right: 10px;
   border: none;
   outline: none;
   box-shadow: none;
+}
+
+select {
+  padding-left: 3px;
 }
 
 input:hover {
   box-shadow: 0px 0px 10px var(--accent-color);
 }
 
-select {
-  width: 100px;
-  height: 25px;
-  border-radius: 5px;
-  border: none;
-  outline: none;
-  box-shadow: none;
+input {
+  padding: 7px;
+  margin-right: 10px;
 }
 
 select:hover {
