--- a/client/src/teamprojects/css/styles.css
+++ b/client/src/teamprojects/css/styles.css
@@ -19,11 +19,6 @@ body {
   height: 100vh;
 }
 
-h1,
-h2 {
-  text-shadow: 0px 0px 3px var(--accent-color);
-}
-
 header {
   background-color: var(--bg-color-2);
   height: 120px;
@@ -46,7 +41,7 @@ a {
 }
 
 a:hover {
-  color: #b2b2b2;
+  text-decoration: underline;
 }
 
 main {
