--- a/client/src/teamprojects/css/styles.css
+++ b/client/src/teamprojects/css/styles.css
@@ -53,12 +53,12 @@ main {
 button {
   background-color: var(--accent-color);
   color: var(--text-color);
-  width: 80px;
-  height: 27px;
   border-radius: 5px;
   border: none;
   outline: none;
   box-shadow: none;
+  text-transform: uppercase;
+  padding: 5px 10px;
 }
 
 button:hover {
