--- a/client/src/teamprojects/todo/css/styles.css
+++ b/client/src/teamprojects/todo/css/styles.css
@@ -7,11 +7,16 @@ ul li {
 }
 
 input {
+  height: 30px;
   margin-bottom: 10px;
-  padding: 5px;
   border-radius: 5px;
-  border: 1px solid black;
+  border: none;
   font-family: inherit;
+  padding: 5px;
+}
+
+input:focus {
+  outline: none;
 }
 
 section {
@@ -19,4 +24,10 @@ section {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.btn {
+  background-color: var(--accent-color);
+  color: var(--text-color);
+  padding: 5px 10px;
 }
