--- a/client/src/teamprojects/form/css/styles.css
+++ b/client/src/teamprojects/form/css/styles.css
@@ -1,5 +1,5 @@
 form {
-  color: black;
+  color: var(--text-color);
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -9,7 +9,6 @@ form {
 
 form h2 {
   margin-top: 25px;
-  color: var(--text-color);
 }
 
 .input-component {
@@ -18,8 +17,8 @@ form h2 {
 
 label {
   position: absolute;
-  left: 10px;
-  top: 10px;
+  left: 0px;
+  top: 0px;
   transition: all 0.3s ease;
   font-size: 16px;
   pointer-events: none;
@@ -27,7 +26,7 @@ label {
 
 .error {
   position: absolute;
-  right: 5px;
+  right: 0px;
   top: -18px;
   color: red;
   font-size: 0.7rem;
@@ -37,46 +36,44 @@ input,
 textarea {
   font-family: inherit;
   font-size: 16px;
-  width: 300px;
-  background-color: var(--text-color);
-  border-radius: 5px;
+  width: 270px;
+  background: none;
   border: none;
-  padding: 10px;
+  padding: 2px 0px;
+  border-style: none none solid none;
+  border-color: var(--text-color);
+  color: var(--text-color);
 }
 
-textarea {
-  height: 120px;
+input {
+}
+
+#growingtextarea {
+  display: block;
+  overflow: hidden;
+  resize: none;
 }
 
 input:hover,
 textarea:hover {
-  box-shadow: 0 0 10px var(--text-color);
+  /* box-shadow: 0 0 10px var(--text-color); */
 }
 
 input:focus,
 textarea:focus {
   outline: none !important;
-  box-shadow: 0 0 10px var(--text-color);
+  border-color: var(--accent-color);
+  /* box-shadow: 0 0 10px var(--text-color); */
 }
 
 input:focus + label,
 input:not(:placeholder-shown) ~ label,
 textarea:focus + label,
 textarea:not(:placeholder-shown) ~ label {
-  top: -22px;
+  top: -18px;
   left: 0px;
-  font-size: 1em;
-  color: var(--text-color);
-}
-
-input.invalid,
-textarea.invalid {
-  box-shadow: 0 0 10px red;
-}
-
-input:focus.invalid,
-textarea:focus.invalid {
-  box-shadow: 0 0 10px red;
+  font-size: 0.7em;
+  color: var(--accent-color);
 }
 
 button {
